...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="70dp"
        android:text="Cancel"
        android:textSize="25sp"
        android:backgroundTint="@color/grey_button">
    </Button>


</LinearLayout>
