...
            android:layout_gravity="center"
            android:backgroundTint="@color/grey_button"
            android:background="@drawable/tag">
        </Button>

        <Button
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Username"
            android:clickable="true"
            android:focusable="true"
            android:textSize="20sp">
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/select_all_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="select all"
            android:textSize="20sp"
            android:clickable="true"
            android:focusable="true"
...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:textSize="20sp"
            android:clickable="true"
            android:focusable="true"
            android:backgroundTint="@color/grey_button"
            android:visibility="gone" />
        <Button
            android:id="@+id/delete_button_multiple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete"
            android:textSize="20sp"
            android:clickable="true"
            android:focusable="true"
...
