...
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="10dp"
        >

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <TextView
...
