...

        <Button
            android:id="@+id/sort_cancel"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CANCEL"

            android:backgroundTint="@color/light_red"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:focusable="true">
...
